# MazeCraze

./: .gitignore  Cargo.toml  README.en.md  README.md
frontend/: README.en.md  README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/algorithms/: generators.ts  solvers.ts
frontend/src/components/: Controls.tsx  MazeCanvas.tsx  Stats.tsx
frontend/src/core/: grid.ts  types.ts
src/: lib.rs  main.rs
src/animation/: frame.rs  mod.rs  player.rs  recorder.rs
src/cli/: mod.rs
src/core/: direction.rs  grid.rs  mod.rs  point.rs
src/export/: mod.rs  text.rs
src/generator/: backtracker.rs  common.rs  kruskal.rs  mod.rs  prim.rs
src/renderer/: ascii.rs  mod.rs  unicode.rs
src/solver/: astar.rs  bfs.rs  common.rs  dfs.rs  mod.rs  wall_follower.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/widgets/: info_panel.rs  maze_canvas.rs  menu_list.rs  mod.rs
tests/: challenge_tests.rs  generator_tests.rs  grid_tests.rs  integration_tests.rs  solver_tests.rs
