[package]
name = "mazecraze"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A TUI interactive maze generator and solver with real-time animation"
license = "MIT"
repository = "https://github.com/yourname/mazecraze"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Random number generation
rand = "0.8"

# Enhanced error handling
thiserror = "1"

# Terminal colors
ansi_term = "0.12"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "mazecraze"
path = "src/main.rs"
