[package]
name = "mazecraze"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A TUI interactive maze generator and solver with real-time animation"
license = "MIT"
repository = "https://github.com/yourname/mazecraze"

[dependencies]
# TUI 框架
ratatui = "0.29"
crossterm = "0.28"

# 命令行解析
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }

# 随机数生成
rand = "0.8"

# 增强错误处理
thiserror = "1"

# 终端颜色
ansi_term = "0.12"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "mazecraze"
path = "src/main.rs"
